--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "product-management",
     "version": "1.0.0",
-    "author": "Deborah Kurata",
-    "description": "Package for the Acme Product Management sample application",
+    "author": "Sandeep B S",
+    "description": "Package for the Product Management sample application",
     "scripts": {
         "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
         "tsc": "tsc",
